--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,22 @@
 	  <artifactId>hibernate-core</artifactId>
 	  <version>5.0.4.Final</version>
     </dependency>
-    
+    <dependency>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	  <version>1.2.17</version>
+	</dependency>
+	<dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>5.1.37</version>
+    </dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>4.2.3.RELEASE</version>
+    </dependency>
+	    
   </dependencies>
   <build>
     <finalName>ipbase</finalName>
